# rytest

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  publish-pypi.yml  release.yml  web.yml
crates/rytest/: Cargo.toml
crates/rytest-e2e/: Cargo.toml  README.md
crates/rytest-e2e/src/: dirs.rs  git.rs  main.rs  uv.rs
crates/rytest-render-benchmark/: Cargo.toml
crates/rytest-render-benchmark/src/: main.rs
crates/rytest/src/: lib.rs  structs.rs
crates/rytest/src/phases/: collection.rs  execution.rs  reporting.rs
crates/rytest/tests/: cli.rs
crates/rytest/tests/input/: conftest.py  test_fixtures.py
crates/rytest/tests/input/folder/: test_another_file.py
crates/rytest/tests/input/good/: test_success.py
docs/: RELEASE.md
pytest_plugin/tests/: conftest.py  test_good.py
scripts/: benchmark.sh
src/: lib.rs  main.rs  structs.rs
src/collection/: mod.rs
src/execution/: mod.rs
src/phases/: collection.rs  execution.rs  mod.rs  reporting.rs
src/phases/collectors/: ignore_skip.rs  ignore_test.rs  mod.rs  parametrize.rs
src/reporting/: mod.rs
tests/: cli.rs
tests/expected/: collect.out  collect_one_error.out  collect_two_errors.out  help.out
tests/input/: test_file.py
tests/input/bad/: test_other_file.py
tests/input/folder/: test_another_file.py  utils.py
tests/input/folder/subfolder/: some_file.py  test_subfolder_file.py
tests/input/good/: test_success.py
