[package]
name = "rytest"
description = "rytest is a reasonably fast, somewhat Pytest compatible Python test runner."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
glob = "0.3.1"
notify = "6.1.1"
rustpython-parser = "0.3.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[dependencies.pyo3]
version = "0.21.2"
features = ["auto-initialize"]