[package]
name = "rytest"
description = "rytest is a reasonably fast, somewhat Pytest compatible Python test runner."
repository = "https://github.com/jimjkelly/rytest"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = "2.33.3"
glob = "0.3.1"
notify = "6.1.1"
rustpython-parser = "0.3.1"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }
insta-cmd = "0.6.0"
predicates = "2"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Makes insta faster
[profile.dev.package]
insta.opt-level = 3

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[dependencies.pyo3]
version = "0.21.2"
features = ["auto-initialize"]
