[package]
name = "rytest-render-benchmark"
version = "0.0.0"
description = "Render benchmarks for rytest"
publish = false

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "wrap_help"] }
fs-err = "2.11.0"
poloto = { version = "19.1.2" }
resvg = { version = "0.29.0" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tagu = { version = "0.1.6" }
